After Emilia proofread it <3

--- a/proposal.tex
+++ b/proposal.tex
@@ -45,9 +45,9 @@ The underlying representation will be a simple graph separated into interior and
 \subsection{Transformation to underlying matroid}
 A matriod perfectly captures the underlying structure of the physical system; much of the work involved with system modeling is combinatoric in nature, such as interconnection topology. By keeping track of which edges are connected to which components, the underlying topology can be simplified and modified using matroid theory. Sage has support for both matroid and Galois theory, which is used to understand the field $\mathbb{GF}(2)$, a natural representation of the edges in a graph.
 \subsection{Causality assignment}
-Causality assignment is a vital step in the extraction of system equations.  It is not entirely necessary, however, if an \emph{equational} statement is used, such as in Modelica, as opposed to \emph{assignment} statement such as in C/C++. It has been shown that the process of assigning causality is equivalent to creating a pseudo-colouring of the underlying matroid representing the system. This process is much easier than the standard methods of causality assignment, which can cause difficulties for bond graphs which are not trees.
+Causality assignment is a vital step in the extraction of system equations.  It is not entirely necessary, however, if an \emph{equational} statement is used, such as in Modelica, as opposed to an \emph{assignment} statement such as in C/C++. It has been shown that the process of assigning causality is equivalent to creating a pseudo-colouring of the underlying matroid representing the system. This process is much easier than the standard methods of causality assignment, which can cause difficulties for bond graphs which are not trees.
 \subsection{Extraction of system equations}
-A system of equations can provide much insight into the system, and allows further study such as perturbation analysis. In the most general case, this yields a set of differential-algebraic equations; these can be either PDAEs or ODAEs, depending on what is being modeled. For example, position can be represented (in a classical mechanics sense) as a ODAE, whereas the flexing of a beam can be represented as a PDAE. Extraction of these equations is fairly straight-forward, but simplification can be tricky, depending on the complexity of the system.
+A system of equations can provide much insight into the system, and allows further study such as perturbation analysis. In the most general case, this yields a set of differential-algebraic equations; these can be either PDAEs or ODAEs, depending on what is being modeled. For example, position can be represented (in a classical mechanics sense) as an ODAE, whereas the flexing of a beam can be represented as a PDAE. Extraction of these equations is fairly straight-forward, but simplification can be tricky, depending on the complexity of the system.
 
 These equations could then be evaluated numerically either within Sage, or passed into a Modelica environment.\footnote{A third option would be to integrate a Modelica solver into Sage; however, that is too ambitious a task to be included and not in the scope of this project.}
 \subsection{Development of a new element to represent frames}
@@ -59,10 +59,10 @@ The possibility of real-time integration would provide much usefulness in human-
 \section{Development of a symplectic numerical integrator}
 Conservation of energy in simulations is important, especially in long-running, large step-size integration schemes. Unfortunately, this is rarely the case; for example, the extremely popular RK4 integration scheme is non-symplectic: it doesn't preserve energy. As such, it is of vital importance that a symplectic integrator be developed in order to conserve energy in a bond graph.
 
-This deliverable will also be integrated into Sage. As Sage has plenty of support for differential equations, it should be a fairly simple matter to achieve. An alternative would be to develop one for a Modelica solver; however, this presents greater challenges due to the nature of the individual Modelica environments.
+This deliverable will also be integrated into Sage. As Sage has plenty of support for differential equations, it should be a fairly simple matter to achieve. An alternative would be to develop one for a Modelica solver; however, this presents greater challenges due to the nature of individual Modelica environments.
 
 \section{Development of a model of a two-body system}
-Creation of a two-body system, with gravitational attraction. Base it on numerous free-body mechanical examples. This may provide the opportunity to introduce a new element; a combined inertia and effort source, to model the gravitational attraction intrinsic to mass. \footnote{Of course, in general relativity, energy density contributes to gravitational attraction too, so energy storage elements also be augmented with an effort source. This may be an interesting topic to be pursued in further research; however, it will not be explored in this project.} 
+This involves the creation of a two-body system, with gravitational attraction. It will be based one one of the numerous free-body mechanical examples available in the literature. This may provide the opportunity to introduce a new element; a combined inertia and effort source, to model the gravitational attraction intrinsic to mass. \footnote{Of course, in general relativity, energy density contributes to gravitational attraction too, so energy storage elements also be augmented with an effort source. This may be an interesting topic to be pursued in further research; however, it will not be explored in this project.} 
 
 \section{Creation of a simple satellite model}
 As two-body systems are usually modeled with point masses, they must be converted to full six degree-of-freedom simulations in order to model vehicles. Due to the directional nature of rocket engines, the satellite model must take into account attitude. This can be done quite simply with tensor-based bond graphs. The Sage bond graph library will be used to store and manipulate the model.
