--- a/proposal.tex
+++ b/proposal.tex
@@ -76,7 +76,9 @@ The necessary $\Delta V$ for executing a Hohmann transfer can be determined from
 \chapter{Timeline}
 The first task to be undertaken will be to develop the test case: the satellite bond graph. This should take no more than a week. Following this, the task of familirisation with the Sage programming interface begins. This could take several months, if the process for adding new mathematical concepts is difficult, but it is more likely to last no longer than four or five weeks. The creation of unit tests will then last another week or two. This should finish roughly around the mid-year break. 
 
-After resuming work, the gradual development of the bond graph framework will proceed in roughly two week blocks, with each block belonging to the addition of a new feature, such as import/export, matroid creation, graph transformation, and so on.
+After resuming work, the gradual development of the bond graph framework will proceed in roughly two week blocks, with each block belonging to the addition of a new feature, such as import/export, matroid creation, graph transformation, and so on. Each block will also include writing of the corresponding section of the final report.
+
+By approximately week 10 of Semester 2, the extraction of system equations should be complete. If the symplectic integrator has been finished as well, then it will be used to simulate the system; if not, the equations will be manually simulated in a Modelica solver. This should leave two weeks for discussion and analysis of results, and an extra week for finishing off the final report.
 \chapter{Literature review}
 There are numerous results in the literature reguarding the mathematical objects underlying bond graphs; however, there is comparitively little on the application of the theory.
 \section{Introductory books and surveys of bond graphs and associated mathematics}
