stuff and things?

--- a/proposal.tex
+++ b/proposal.tex
@@ -91,7 +91,7 @@ An excellent compendium by Hairer, Lubich and Wanner, \cite{Hairer} is a textboo
 \section{Graph theory}
 \cite{Knauer2011} is an introductory textbook on algebraic graph theory. It focuses on the description of graphs from a matrix viewpoint, and as such is appropriate for systems which manipulate graphs based on linear algebra packages.
 %\section{Geometric dynamics}
-\section{Scientific programming}
+%\section{Scientific programming}
 
 \bibliographystyle{unsrtnat}
 \bibliography{bibliography}
