--- a/proposal.tex
+++ b/proposal.tex
@@ -80,7 +80,7 @@ After resuming work, the gradual development of the bond graph framework will pr
 
 By approximately week 10 of Semester 2, the extraction of system equations should be complete. If the symplectic integrator has been finished as well, then it will be used to simulate the system; if not, the equations will be manually simulated in a Modelica solver. This should leave two weeks for discussion and analysis of results, and an extra week for finishing off the final report.
 \chapter{Literature review}
-There are numerous results in the literature reguarding the mathematical objects underlying bond graphs; however, there is comparitively little on the application of the theory.
+There are numerous results in the literature regarding the mathematical objects underlying bond graphs; however, there is comparatively little on the application of the theory.
 \section{Introductory books and surveys of bond graphs and associated mathematics}
 An excellent introductory textbook on bond graph modeling is \cite{Borutzky2010}. It is a coherent collection of a vast amount of results from the scattered papers on bond graph methodology, and written in a very friendly style.
 
